--- a/frontend/hospital-app/src/Components/AddDepartments/Department.css
+++ b/frontend/hospital-app/src/Components/AddDepartments/Department.css
@@ -4,6 +4,10 @@
   left: 40%;
   transform: translate(-50%, -50%);
 }
+.text-left {
+  text-align: left !important;
+  margin-left: 300px;
+}
 .form {
   position: absolute;
   top: 60%;
@@ -14,6 +18,7 @@
 .btn2 {
   position: relative;
   left: -48px;
+  top: -10px;
 }
 
 @media only screen and (max-width: 1440px) {
