--- a/frontend/hospital-app/src/Components/AddEmployee/AddEmployee.css
+++ b/frontend/hospital-app/src/Components/AddEmployee/AddEmployee.css
@@ -5,3 +5,16 @@
   left: 70%;
   transform: translate(-50%, -50%);
 }
+.label {
+  display: block;
+  text-align: left;
+}
+.upload {
+  position: relative;
+  left: -160px;
+}
+.submit {
+  position: relative;
+  left: -45px;
+  top: -46px;
+}
